fix: horizontal overflow on smaller devices

--- a/ping-coming-soon-page-master/style.css
+++ b/ping-coming-soon-page-master/style.css
@@ -11,7 +11,6 @@
 
 body {
   font-family: "Libre Franklin", sans-serif;
-  overflow-x: hidden;
 }
 
 .container {
@@ -88,7 +87,8 @@ form button {
   color: white;
   border-radius: 18px;
   width: 20%;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   transition: 0.2s;
 }
 form button:hover {
@@ -158,9 +158,10 @@ footer .copyright {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    min-width: unset;
   }
   form button,
-form input {
+  form input {
     width: 70vw;
   }
   form p {
